# sol-factory

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  package.json  tsconfig.json
.claude/: launch.json  settings.local.json
core_edge/: .gitignore  README.md  config.py  main.py  requirements.txt
core_edge/models/: position.py  signal.py
core_edge/services/: analysis.py  execution.py  market_data.py  scoring.py
core_edge/ui/: dashboard.py
core_edge_v2/: .env.example  README.md  main.py  optimized_weights.json  requirements.txt  walk_forward_results.json
core_edge_v2/.streamlit/: config.toml
core_edge_v2/models/: position.py  signal.py
core_edge_v2/services/: analysis.py  backtester.py  execution.py  market_data.py  optimizer.py  risk_manager.py  scoring.py
core_edge_v2/tests/: test_api_connection.py  test_backtester.py
core_edge_v2/ui/: dashboard.py
core_edge_v2/utils/: config.py  helpers.py  logger.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  polyfills.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/mint/: route.ts
frontend/app/create/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/donate/: page.tsx
frontend/app/success/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: AnimatedCounter.tsx  CollectionCard.tsx  NavBar.tsx  NftPreviewCard.tsx  Polyfills.tsx  SimBanner.tsx  WalletButton.tsx  WalletProvider.tsx
frontend/lib/: idl.ts  solana.ts  utils.ts
programs/sol-factory/: Cargo.toml
programs/sol-factory/src/: errors.rs  lib.rs  state.rs
tests/: sol-factory.ts
(+3 files in other folders)
