[workspace]
members   = ["programs/*"]
resolver  = "2"

# ── Release profile ──────────────────────────────────────────────────────────
# overflow-checks = true ensures all integer arithmetic is checked in release
# mode, consistent with the checked_add calls in the program logic.
[profile.release]
overflow-checks = true
lto             = "fat"
codegen-units   = 1

[profile.release.build-override]
opt-level     = 3
incremental   = false
codegen-units = 1
